--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,31 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
+.log
 .DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
+.idea
+.jest-*
+node_modules
+reports
+*.log
+.nyc_output
+**/coverage
+.yarn
+.yarnrc
+tsconfig.tsbuildinfo
+.blitz
+.next
+dist
+.now
 # local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# vercel
-.vercel
+**/.env.local
+**/.env.*.local
+**/.envrc
+.blitz-*
+.blitz-cli-cache
+.vscode
+.tsbuildinfo
+.nvmrc
+**/.test*
+examples/auth2
+.idea
+.ultra.cache.json
+db.sqlite-journal
+test/integration/**/db.json
