--- a/package.json
+++ b/package.json
@@ -3,13 +3,58 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "bootstrap": "lerna bootstrap",
+    "dev": "preconstruct watch",
+    "build": "preconstruct build",
+    "lint": "eslint --ext \".js,.jsx\" .",
+    "lint-fix": "eslint ./ -c .eslintrc.js --fix --ext js,jsx",
+    "clean": "lerna clean"
+  },
+  "workspaces": {
+    "packages": [
+      "packages/*",
+      "apps/*"
+    ]
+  },
+  "preconstruct": {
+    "packages": [
+      "packages/*"
+    ]
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "eslint --fix"
+    ],
+    "package.json": []
   },
   "dependencies": {
+    "@babel/preset-env": "^7.13.15",
+    "@chakra-ui/react": "1.6.0",
+    "@emotion/react": "11.1.5",
+    "@emotion/styled": "11.3.0",
+    "framer-motion": "4.1.10",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.13.16",
+    "@babel/preset-react": "^7.13.13",
+    "@next/bundle-analyzer": "^10.1.3",
+    "@preconstruct/cli": "^2.0.7",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "kill-port": "^1.6.1",
+    "lerna": "^4.0.0",
+    "lint-staged": "^10.5.4",
+    "next-compose-plugins": "^2.2.1",
+    "next-optimized-images": "^2.6.2",
+    "rimraf": "^3.0.2"
   }
 }
