--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@chakra-ui/react": "1.6.0",
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.3.0",
+    "eslint-plugin-unicorn": "^31.0.0",
     "framer-motion": "4.1.10",
     "next": "10.1.3",
     "react": "17.0.2",
